<resources>
    <string name="app_name">RoadStatusService-android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_list_picture">ListPictureActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="location">Location 19</string>
    <string name="listcustom">listCustom</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="list">list</string>
    <string name="manage">manage</string>
    <string name="configuration">Configuration</string>
    <string name="slideshow">Slideshow</string>
    <string name="make_photo">Make photo</string>
    <string name="base64_picture">base64_picture</string>
    <string name="title_activity_location">LocationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
